# otietalk

./: .editorconfig  .flake8  .gitignore  Makefile  OT3_move_to_coordinates.py  OT3_perf.py  Pipfile  README.md  a.csv  a.py  analyze.py  base_cli.py  commands.py  conftest.py  fill_db.py  freeze.py  get_offsets.py  hs.py  hs_commands.py  hs_labware.py  hs_simple_commands.py  move_to_coordinates.py  mr_wizard.py  pyproject.toml  pytest.ini  rich_it.py  robot_client.py  robot_interactions.py  robot_perf.py  run_something.py  ssh.py  td_labware.py  try.csv  ui.py  util.py  wizard.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: lint.yml
analyze/: Dockerfile.analyze-app  Dockerfile.analyze-cli  Dockerfile.base  Dockerfile.opentrons-base  Dockerfile.robot-server  Makefile  app.py  dev-flex.env  dev-ot2.env  docker-compose.yml  requirements.txt
analyze/templates/: index.html
clients/: robot_client.py  robot_interactions.py
freeze/: freeze.py
interactions/: OT3_perf.py  analyze.py  commands.py  fill_db.py  get_offsets.py  hs_commands.py  hs_labware.py  hs_simple_commands.py  run_something.py  td_labware.py
moveto/: OT3_move_to_coordinates.py  move_to_coordinates.py
protocols/: basic.py
robot_discovery/: robots.py
ssh/: ssh.py
tests/: hs_test.py  tc_test.py
util/: util.py
wizard/: wizard.py
