[project]
name = "otietalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.11.0",
    "black>=25.11.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "opentrons-shared-data==8.8.0a9",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "paramiko>=4.0.0",
    "pyfiglet>=1.0.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "ruff>=0.14.6",
    "scp>=0.15.0",
    "types-paramiko>=4.0.0.20250822",
    "zeroconf>=0.148.0",
]

[tool.ruff]
line-length = 140
target-version = "py314"
exclude = [""]

[tool.ruff.lint]
ignore = ["E722"]

[tool.ruff.lint.per-file-ignores]
"fill_db.py" = ["E501"]
"rich_it.py" = ["E501"]
"OT3_perf.py" = ["E501"]
"util.py" = ["B008"]

[tool.mypy]
strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = "__init__.py"
namespace_packages = true

[[tool.mypy.overrides]]
module = ["opentrons.*", "scp"]
ignore_missing_imports = true

